--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,25 +1,27 @@
 /* Stiziles */
 
 html, body {
-  background: #222222;
+  /*background: #222222;*/
 }
 
 /* main */
 
 .main {
-  width: 100%;
+  width: 80vw;
   height: 100%;
-  background: #222222;
-  color: #fff;
+  display: block;
+  margin: 0 auto;
+  /*background: #222222;*/
+  /*color: #fff;*/
 }
 
-.main img {
+/*.main img {
   width: 103px;
   height: 89px;
   margin-bottom: 10px;
   text-align: center;
 }
-
+*/
 /* transitions */
 
 .fade-enter {
